namespace Transport;

public interface ICargo
{
    public void Load();
    public void UnLoad();
}