namespace Transport;

public interface IPassenger
{
    public void Boarding();
    public void UnBoarding();
}